env/backend/manifests/web-shell-template.yaml
apiVersion: v1
kind: Pod
metadata:
  name: {pod_name}
  labels:
    app: web-shell
    user-id: {pod_name}
spec:
  containers:
    - name: ttyd
      image: kix.ocir.io/orasejapan/se-learning-hub/web-shell/ttyd:latest
      ports:
        - containerPort: 7681
    - name: docker-daemon
      image: kix.ocir.io/orasejapan/se-learning-hub/web-shell/dind:latest
      securityContext:
        privileged: true
      ports:
        - containerPort: 2375
