env/backend/manifests/web-shell.yaml
# apiVersion: v1
# kind: Pod
# metadata:
#   name: pod-for-user-${USER_ID}
#   labels:
#     user-id: "${USER_ID}"
# spec:
#   containers:
#     - name: ttyd
#       image: kix.ocir.io/orasejapan/se-learning-hub/web-shell/ttyd:latest
#       ports:
#         - containerPort: 7681
#       env:
#         - name: DOCKER_HOST
#           value: "tcp://localhost:2375"

#     - name: docker-daemon
#       image: kix.ocir.io/orasejapan/se-learning-hub/web-shell/dind:latest
#       securityContext:
#         privileged: true
#       ports:
#         - containerPort: 2375

apiVersion: v1
kind: Pod
metadata:
  name: web-shell-pod
  labels:
    app: web-shell
spec:
  containers:
    - name: ttyd
      image: kix.ocir.io/orasejapan/se-learning-hub/web-shell/ttyd:latest
      ports:
        - containerPort: 7681
    - name: docker-daemon
      image: kix.ocir.io/orasejapan/se-learning-hub/web-shell/dind:latest
      securityContext:
        privileged: true
      ports:
        - containerPort: 2375
