env/backend/manifests/web-shell-service-template.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-for-user-{pod_name}
  labels:
    app: web-shell
spec:
  type: ClusterIP
  selector:
    user-id: {pod_name} # PodのセレクターにユーザーIDを使用
  ports:
    - protocol: TCP
      port: 7681
      targetPort: 7681
