env/backend/manifests/ingress-template.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-for-{pod_name}
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  labels:
    app: web-shell
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /env/{pod_name}(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: service-for-user-{pod_name}
                port:
                  number: 7681
